2008-03-10  Marius Vollmer  <marius.vollmer@nokia.com>

	* src/update-notifier.c (check_for_notifications_thread): Check
	response code of HTTP request to determine whether we really got
	the file.  Leave the downloaded text on disk in case of failure
	for easier trouble shooting.  Call curl_easy_cleanup for
	correctness.

2008-03-07  Marius Vollmer  <marius.vollmer@nokia.com>

	* src/operations.cc (up_remove, up_remove_with_info): Call
	get_package_info so that the removable_status is guaranteed to be
	set.

	* src/main.h (get_package_info): Renamed onyl_basic_info to
	only_installable_info for extra clarity.

2008-03-07  Felipe Erias Morandeira  <femorandeira@maemo.org>

	* main.cc : removed the static variable record_seen_updates,
	(NB81739).

2008-03-07  Mario Sanchez Prada  <msanchez@maemo.org>

	Added the 'Updating' banner to be shown when the operation
	APTCMD_GET_CATALOGUES takes too much time before filling the
	dialog (not likely, but possible).

	* src/repo.cc (cat_response): Call to hide_updating when the
	dialog is closed.
	(scd_get_catalogues_reply): Call to prevent_updating to avoid
	showing the banner once the information was already retrieved.
	(show_catalogue_dialog): Call to show_updating right after
	creating and showing the dialog.

	* src/details.cc (add_table_field): Also allow to set only a
	'value' field text when no 'field' field text is specified.

2008-03-06  Mario Sanchez Prada  <msanchez@maemo.org>

	Filled an 'interaction flow' gap which always happened when
	opening the 'Application catalogues...' dialog.

	* src/repo.cc (show_catalogue_dialog_flow): Don't call to
	get_catalogues before showing the dialog. Just call to
	show_catalogue_dialog and let it to call to get_catalogues once
	the information was retrieved. Moved up in this file.
	(scdf_with_catalogues): Removed, since it's not needed anymore
	after changes described above. Moved up in this file.
	(scdf_dialog_done): Moved up in this file.
	(scdf_end): Likewise.